add arquivos ao gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 calculator.py
+collatzsequence.py
+commacode.py
+conwaysgame.py
+hangman.py
+listtodictionaryfunction.py
+papel_tesoura2.0.py
+snake_game.py
+zigzag0.py
 zzz.py
